update respons 320px

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
       <div class="main">
         <div class="main_introduction">
           <p class="main_name">Experience your ultimate mobile application</p>
+          <div class="main_photo-320px">
+            <img class="main_photo-settings" src="./images/main_photo.png" alt="phone">
+          </div>
           <p class="main_text">
             Get your blood tests delivered at let home collect sample from the
             victory of the managments that supplies best design system
@@ -58,9 +61,9 @@
           </div>
           <div class="main_sponsored">
             <p class="main_sponsored-text">Sponsored by:</p>
-            <a href="#"><img class="main_sponsored-img" src="./images/main_sponsor-paypal.png" alt="paypal" /></a>
-            <a href="#"><img class="main_sponsored-img" src="./images/main_sponsor-google.png" alt="google"></a>
-            <a href="#"><img class="main_sponsored-img" src="./images/main_sponsor-dropbox.png" alt="dropbox"></a>
+            <a class="main_sponsored-link" href="#"><img class="main_sponsored-img" src="./images/main_sponsor-google.png" alt="paypal" /></a>
+            <a class="main_sponsored-link" href="#"><img class="main_sponsored-img" src="./images/main_sponsor-paypal.png" alt="google"></a>
+            <a class="main_sponsored-link" href="#"><img class="main_sponsored-img" src="./images/main_sponsor-dropbox.png" alt="dropbox"></a>
           </div>
         </div>
         <div class="main_photo">
