update links and title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Landguru</title>
     <link rel="stylesheet" href="./style/styles.css" />
   </head>
   <body>
@@ -61,9 +61,9 @@
           </div>
           <div class="main_sponsored">
             <p class="main_sponsored-text">Sponsored by:</p>
-            <a class="main_sponsored-link" href="#"><img class="main_sponsored-img" src="./images/main_sponsor-google.png" alt="paypal" /></a>
-            <a class="main_sponsored-link" href="#"><img class="main_sponsored-img" src="./images/main_sponsor-paypal.png" alt="google"></a>
-            <a class="main_sponsored-link" href="#"><img class="main_sponsored-img" src="./images/main_sponsor-dropbox.png" alt="dropbox"></a>
+            <a class="main_sponsored-link" ><img class="main_sponsored-img" src="./images/main_sponsor-google.png" alt="paypal" /></a>
+            <a class="main_sponsored-link" ><img class="main_sponsored-img" src="./images/main_sponsor-paypal.png" alt="google"></a>
+            <a class="main_sponsored-link" ><img class="main_sponsored-img" src="./images/main_sponsor-dropbox.png" alt="dropbox"></a>
           </div>
         </div>
         <div class="main_photo">
