ready to block features cards
respons full

--- a/index.html
+++ b/index.html
@@ -9,69 +9,135 @@
   </head>
   <body>
     <div class="container">
-    <div class="wrapper">
-      <div class="header">
-        <div class="header_logo">
-          <a href="#" class="header_logo-link"
-            ><img class="header_logo-img" src="./images/header_logo.png" alt="logo"
-          /></a>
-          <a href="#" class="header_text">Landguru</a>
-        </div>
-        <div class="header_nav">
-          <a class="header_nav-link" href="#">Home</a>
-          <a class="header_nav-link" href="#">Adversite</a>
-          <a class="header_nav-link" href="#">Supports</a>
-          <a class="header_nav-link" href="#">Contact</a>
-        </div>
-        <ul class="menu">
-          <li><a class="menuItem" href="#">Home</a></li>
-          <li><a class="menuItem" href="#">Adversite</a></li>
-          <li><a class="menuItem" href="#">Supports</a></li>
-          <li><a class="menuItem" href="#">Contact</a></li>
-        </ul>
-        <button class="hamburger">
-          <i class="menuIcon material-icons">Menu</i>
-          <i class="closeIcon material-icons">Close</i>
-        </button>
-        <div class="header_button">
-          <a class="header_button-link" href="#">Get Started </a>
-        </div>
-      </div>
-      <div class="main">
-        <div class="main_introduction">
-          <p class="main_name">Experience your ultimate mobile application</p>
-          <div class="main_photo-320px">
-            <img class="main_photo-settings" src="./images/main_photo.png" alt="phone">
-          </div>
-          <p class="main_text">
-            Get your blood tests delivered at let home collect sample from the
-            victory of the managments that supplies best design system
-            guidelines ever.
-          </p>
-          <div class="main_buttons">
-            <a class="main_button-enter" href="#">Get Started</a>
-            <a class="main_button-watch" href="#"
+      <div class="wrapper">
+        <div class="header">
+          <div class="header_logo">
+            <a href="#" class="header_logo-link"
               ><img
-                class="main_button-img"
-                src="./images/main_buttons-watch.png"
-                alt="logo watch"
-              />
-              Watch Video</a
-            >
+                class="header_logo-img"
+                src="./images/header_logo.png"
+                alt="logo"
+            /></a>
+            <a href="#" class="header_text">Landguru</a>
           </div>
-          <div class="main_sponsored">
-            <p class="main_sponsored-text">Sponsored by:</p>
-            <a class="main_sponsored-link" ><img class="main_sponsored-img" src="./images/main_sponsor-google.png" alt="paypal" /></a>
-            <a class="main_sponsored-link" ><img class="main_sponsored-img" src="./images/main_sponsor-paypal.png" alt="google"></a>
-            <a class="main_sponsored-link" ><img class="main_sponsored-img" src="./images/main_sponsor-dropbox.png" alt="dropbox"></a>
+          <div class="header_nav">
+            <a class="header_nav-link" href="#">Home</a>
+            <a class="header_nav-link" href="#">Adversite</a>
+            <a class="header_nav-link" href="#">Supports</a>
+            <a class="header_nav-link" href="#">Contact</a>
+          </div>
+          <ul class="menu">
+            <li><a class="menuItem" href="#">Home</a></li>
+            <li><a class="menuItem" href="#">Adversite</a></li>
+            <li><a class="menuItem" href="#">Supports</a></li>
+            <li><a class="menuItem" href="#">Contact</a></li>
+          </ul>
+          <button class="hamburger">
+            <i class="menuIcon material-icons">Menu</i>
+            <i class="closeIcon material-icons">Close</i>
+          </button>
+          <div class="header_button">
+            <a class="header_button-link" href="#">Get Started </a>
           </div>
         </div>
-        <div class="main_photo">
-          <img class="main_photo-settings" src="./images/main_photo.png" alt="phone">
+        <div class="main">
+          <div class="main_introduction">
+            <p class="main_name">Experience your ultimate mobile application</p>
+            <div class="main_photo-320px">
+              <img
+                class="main_photo-settings"
+                src="./images/main_photo.png"
+                alt="phone"
+              />
+            </div>
+            <p class="main_text">
+              Get your blood tests delivered at let home collect sample from the
+              victory of the managments that supplies best design system
+              guidelines ever.
+            </p>
+            <div class="main_buttons">
+              <a class="main_button-enter" href="#">Get Started</a>
+              <a class="main_button-watch" href="#"
+                ><img
+                  class="main_button-img"
+                  src="./images/main_buttons-watch.png"
+                  alt="logo watch"
+                />
+                Watch Video</a
+              >
+            </div>
+            <div class="main_sponsored">
+              <p class="main_sponsored-text">Sponsored by:</p>
+              <a class="main_sponsored-link"
+                ><img
+                  class="main_sponsored-img"
+                  src="./images/main_sponsor-google.png"
+                  alt="paypal"
+              /></a>
+              <a class="main_sponsored-link"
+                ><img
+                  class="main_sponsored-img"
+                  src="./images/main_sponsor-paypal.png"
+                  alt="google"
+              /></a>
+              <a class="main_sponsored-link"
+                ><img
+                  class="main_sponsored-img"
+                  src="./images/main_sponsor-dropbox.png"
+                  alt="dropbox"
+              /></a>
+            </div>
+          </div>
+          <div class="main_photo">
+            <img
+              class="main_photo-settings"
+              src="./images/main_photo.png"
+              alt="phone"
+            />
+          </div>
         </div>
       </div>
     </div>
-  </div>
+    <div class="wrapper">
+      <div class="features">
+        <div class="features_name">
+          <p class="features_name-maintext">Quality features</p>
+          <p class="features_name-subtext">Meet exciting feature of app</p>
+        </div>
+        <div class="features_cards">
+          <div class="features_card">
+            <div class="features_card-img">
+              <img src="./images/featuresCardOne.svg" alt="" />
+            </div>
+            <p class="features_card-name">Vector Editing</p>
+            <p class="features_card-descr">
+              Get your blood tests delivered at home collect a sample from the
+              your blood tests.
+            </p>
+          </div>
+          <div class="features_card">
+            <div class="features_card-img">
+              <img src="./images/featuresCardSecond.svg" alt="" />
+            </div>
+            <p class="features_card-name">Customize & Monitoring</p>
+            <p class="features_card-descr">
+              Get your blood tests delivered at home collect a sample from the
+              your blood tests.
+            </p>
+          </div>
+          <div class="features_card">
+            <div class="features_card-img">
+              <img src="./images/featuresCardThird.svg" alt="" />
+            </div>
+            <p class="features_card-name">Quality & short-period</p>
+            <p class="features_card-descr">
+              Get your blood tests delivered at home collect a sample from the
+              your blood tests.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="./js/hamburger.js"></script>
   </body>
 </html>
