done block core features

--- a/index.html
+++ b/index.html
@@ -137,6 +137,40 @@
           </div>
         </div>
       </div>
+      <div class="corefeatures">
+        <div class="corefeatures_img-main">
+          <img class="corefeatures_img" src="./images/core_features-phone.png" alt="">
+        </div>
+        <div class="corefeatures_main">
+          <div class="corefeatures_main-title">
+            <p class="corefeatures_title">Core features</p>
+          </div>
+          <div class="corefeatures_main-descr">
+            <p class="corefeatures_descr">Smart Jackpots that you may love this anytime & anywhere</p>
+          </div>
+          <div class="corefeatures_cards">
+            <div class="corefeatures_card">
+              <div class="corefeatures_card-img">
+                <img src="./images/core_features-mini-one.png" alt="logo">
+              </div>
+              <div class="corefeatures_card-text">
+                <p class="corefeatures_text-name">Smart Features</p>
+                <p class="corefeatures_text-descr">Get your blood tests delivered at let home collect sample from the victory of the managments. your blood tests.</p>
+              </div>
+            </div>
+          </div>
+          <div class="corefeatures_card">
+            <div class="corefeatures_card-img">
+              <img src="./images/core_features-mini-two.png"    alt="logo">
+            </div>
+            <div class="corefeatures_card-text">
+              <p class="corefeatures_text-name">Secure Contents</p>
+              <p class="corefeatures_text-descr">Get your blood tests delivered at let home collect sample from the victory of the managments. your blood tests.</p>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
     </div>
     <script src="./js/hamburger.js"></script>
   </body>
