add jquery and fix hamburger

--- a/index.html
+++ b/index.html
@@ -410,7 +410,13 @@
       <div class="wfeatures">
         <div class="wfeatures_textside">
           <p class="wfeatures_mainname">Core features</p>
-          <div class="wfeatures_imgside-840px"><img class="wfeatures_imgside-img-840px" src="./images/wfeatures-img.svg" alt="world"></div>
+          <div class="wfeatures_imgside-840px">
+            <img
+              class="wfeatures_imgside-img-840px"
+              src="./images/wfeatures-img.svg"
+              alt="world"
+            />
+          </div>
           <p class="wfeatures_title">
             Smart Jackpots that you may love this anytime & anywhere
           </p>
@@ -423,9 +429,17 @@
             <a href="#" class="wfeatures_button-set">Get Started</a>
           </div>
         </div>
-        <div class="wfeatures_imgside"><img class="wfeatures_imgside-img" src="./images/wfeatures-img.svg" alt="world"></div>
+        <div class="wfeatures_imgside">
+          <img
+            class="wfeatures_imgside-img"
+            src="./images/wfeatures-img.svg"
+            alt="world"
+          />
+        </div>
       </div>
     </div>
+    <script src="./js/jquery-3.6.1.min.js"></script>
+    <script src="./js/animJquery.js"></script>
     <script src="./js/hamburger.js"></script>
   </body>
 </html>
