done start anim main

--- a/index.html
+++ b/index.html
@@ -68,19 +68,19 @@
             </div>
             <div class="main_sponsored">
               <p class="main_sponsored-text">Sponsored by:</p>
-              <a class="main_sponsored-link"
+              <a href="#" class="main_sponsored-link"
                 ><img
                   class="main_sponsored-img"
                   src="./images/main_sponsor-google.png"
                   alt="paypal"
               /></a>
-              <a class="main_sponsored-link"
+              <a href="#" class="main_sponsored-link"
                 ><img
                   class="main_sponsored-img"
                   src="./images/main_sponsor-paypal.png"
                   alt="google"
               /></a>
-              <a class="main_sponsored-link"
+              <a href="#" class="main_sponsored-link"
                 ><img
                   class="main_sponsored-img"
                   src="./images/main_sponsor-dropbox.png"
@@ -441,5 +441,6 @@
     <script src="./js/jquery-3.6.1.min.js"></script>
     <script src="./js/animJquery.js"></script>
     <script src="./js/hamburger.js"></script>
+    <script src="./js/scrollEvents.js"></script>
   </body>
 </html>
