--- a/index.html
+++ b/index.html
@@ -441,6 +441,6 @@
     <script src="./js/jquery-3.6.1.min.js"></script>
     <script src="./js/animJquery.js"></script>
     <script src="./js/hamburger.js"></script>
-    <script src="./js/scrollEvents.js"></script>
+    <script src="./js/animEventsInterval.js"></script>
   </body>
 </html>
