--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landguru</title>
     <link rel="stylesheet" href="./style/styles.css" />
+    
   </head>
   <body>
+    <div id="p_prldr">
+      <div class="contpre">
+        <span class="svg_anm"></span><br />Wait<br /><small
+          >loading in progress</small
+        >
+      </div>
+    </div>
+
     <div class="container">
       <div class="wrapper">
         <div class="header">
@@ -439,6 +448,7 @@
       </div>
     </div>
     <script src="./js/jquery-3.6.1.min.js"></script>
+    <script src="./js/loader.js"></script>
     <script src="./js/animJquery.js"></script>
     <script src="./js/hamburger.js"></script>
     <script src="./js/animEventsInterval.js"></script>
