done next block

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landguru</title>
     <link rel="stylesheet" href="./style/styles.css" />
-    
   </head>
   <body>
     <div id="p_prldr">
@@ -444,6 +443,80 @@
             src="./images/wfeatures-img.svg"
             alt="world"
           />
+        </div>
+      </div>
+    </div>
+    <div class="functions">
+      <div class="wrapper">
+        <div class="functions_block">
+          <div class="functions_title">
+            <p class="functions_title-text">Whats the function</p>
+          </div>
+          <div class="functions_descr">
+            <p class="functions_descr-text">Let’s see how it works</p>
+          </div>
+          <div class="functions_cards">
+            <div class="functions_card">
+              <div class="functions_card-images">
+                <div class="functions_card-number" id="numberOne"></div>
+                <div class="functions_card-arrow"></div>
+              </div>
+              <div class="functions_card-title">
+                <p class="functions_card-text">Set disbursement Instructions</p>
+              </div>
+              <div class="functions_card-descr">
+                <p class="functions_card-descr-text">
+                  Get your blood tests delivered at home collect a sample from
+                  the your blood tests.
+                </p>
+              </div>
+            </div>
+            <div class="functions_card">
+              <div class="functions_card-images">
+                <div class="functions_card-number" id="numberSecond"></div>
+                <div class="functions_card-arrow" id="arrowSecond"></div>
+              </div>
+              <div class="functions_card-title">
+                <p class="functions_card-text">Assembly retrieves funds from your account</p>
+              </div>
+              <div class="functions_card-descr">
+                <p class="functions_card-descr-text">
+                  Get your blood tests delivered at home collect a sample from
+                  the your blood tests.
+                </p>
+              </div>
+            </div>
+            <div class="functions_card">
+              <div class="functions_card-images">
+                <div class="functions_card-number" id="numberThird"></div>
+                <div class="functions_card-arrow" id="arrowOne"></div>
+              </div>
+              <div class="functions_card-title">
+                <p class="functions_card-text">Assembly retrieves funds from your account</p>
+              </div>
+              <div class="functions_card-descr">
+                <p class="functions_card-descr-text">
+                  Get your blood tests delivered at home collect a sample from
+                  the your blood tests.
+                </p>
+              </div>
+            </div>
+            <div class="functions_card">
+              <div class="functions_card-images">
+                <div class="functions_card-number" id="numberFour"></div>
+
+              </div>
+              <div class="functions_card-title">
+                <p class="functions_card-text">Customer receives funds payment</p>
+              </div>
+              <div class="functions_card-descr">
+                <p class="functions_card-descr-text">
+                  Get your blood tests delivered at home collect a sample from
+                  the your blood tests.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
