prepare to create slider

--- a/index.html
+++ b/index.html
@@ -477,7 +477,9 @@
                 <div class="functions_card-arrow" id="arrowSecond"></div>
               </div>
               <div class="functions_card-title">
-                <p class="functions_card-text">Assembly retrieves funds from your account</p>
+                <p class="functions_card-text">
+                  Assembly retrieves funds from your account
+                </p>
               </div>
               <div class="functions_card-descr">
                 <p class="functions_card-descr-text">
@@ -492,7 +494,9 @@
                 <div class="functions_card-arrow" id="arrowOne"></div>
               </div>
               <div class="functions_card-title">
-                <p class="functions_card-text">Assembly retrieves funds from your account</p>
+                <p class="functions_card-text">
+                  Assembly retrieves funds from your account
+                </p>
               </div>
               <div class="functions_card-descr">
                 <p class="functions_card-descr-text">
@@ -504,10 +508,11 @@
             <div class="functions_card">
               <div class="functions_card-images">
                 <div class="functions_card-number" id="numberFour"></div>
-
               </div>
               <div class="functions_card-title">
-                <p class="functions_card-text">Customer receives funds payment</p>
+                <p class="functions_card-text">
+                  Customer receives funds payment
+                </p>
               </div>
               <div class="functions_card-descr">
                 <p class="functions_card-descr-text">
@@ -520,10 +525,18 @@
         </div>
       </div>
     </div>
+    <div class="wrapper">
+      <div class="feedback">
+        <div class="feedback_title">Testimunial</div>
+        <div class="feedback_decsr">Meet Client Satisfaction</div>
+        <div class="feedback_slider"></div>
+      </div>
+    </div>
     <script src="./js/jquery-3.6.1.min.js"></script>
     <script src="./js/loader.js"></script>
     <script src="./js/animJquery.js"></script>
     <script src="./js/hamburger.js"></script>
     <script src="./js/animEventsInterval.js"></script>
+
   </body>
 </html>
