--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landguru</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.theme.default.min.css"
+    />
     <link rel="stylesheet" href="./style/styles.css" />
   </head>
   <body>
@@ -16,7 +32,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="containers">
       <div class="wrapper">
         <div class="header">
           <div class="header_logo">
@@ -529,14 +545,127 @@
       <div class="feedback">
         <div class="feedback_title">Testimunial</div>
         <div class="feedback_decsr">Meet Client Satisfaction</div>
-        <div class="feedback_slider"></div>
+        <section id="testimonial_area" class="section_padding">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="testmonial_slider_area text-center owl-carousel">
+                  <div class="box-area">
+                    <div class="rate">
+                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-checked.svg" alt="star">
+                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-checked.svg" alt="star">
+                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-checked.svg" alt="star">
+                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-nocheck.svg" alt="star">
+                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-nocheck.svg" alt="star">
+                    </div>
+                    <div class="area-title">Modern look & trending design</div>
+                    <div class="area-text">
+                      Get working experience to work with this amazing team & in
+                      future want to work together for bright future projects
+                      and also make deposit to freelancer.
+                    </div>
+                    <div class="area-user">
+                      <div class="area-img">
+                        <img class="user-img" src="./images/feedbacks-users/star-user.svg" alt="">
+                      </div>
+                      <div class="area-user-name">
+                        <p class="user-name">Denny Hilguston</p>
+                        <a class="user-link" href="#">@denny.hil</a>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- END SINGLE TESTIMONIALS -->
+
+                  <div class="box-area">
+                    <div class="rate">
+                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-checked.svg" alt="star">
+                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-checked.svg" alt="star">
+                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-checked.svg" alt="star">
+                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-nocheck.svg" alt="star">
+                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-nocheck.svg" alt="star">
+                    </div>
+                    <div class="area-title">Design Quality & performance</div>
+                    <div class="area-text">
+                      Get working experience to work with this amazing team & in
+                      future want to work together for bright future projects
+                      and also make deposit to freelancer.
+                    </div>
+                    <div class="area-user">
+                      <div class="area-img">
+                        <img class="user-img" src="./images/feedbacks-users/star-user-2.svg" alt="">
+                      </div>
+                      <div class="area-user-name">
+                        <p class="user-name">Denny Hilguston</p>
+                        <a class="user-link" href="#">@denny.hil</a>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- END SINGLE TESTIMONIALS -->
+
+                  <div class="box-area">
+                    <div class="rate">
+                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-checked.svg" alt="star">
+                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-checked.svg" alt="star">
+                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-checked.svg" alt="star">
+                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-nocheck.svg" alt="star">
+                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-nocheck.svg" alt="star">
+                    </div>
+                    <div class="area-title">Layout and organized layers</div>
+                    <div class="area-text">
+                      Get working experience to work with this amazing team & in
+                      future want to work together for bright future projects
+                      and also make deposit to freelancer.
+                    </div>
+                    <div class="area-user">
+                      <div class="area-img">
+                        <img class="user-img" src="./images/feedbacks-users/star-user-3.svg" alt="">
+                      </div>
+                      <div class="area-user-name">
+                        <p class="user-name">Denny Hilguston</p>
+                        <a class="user-link" href="#">@denny.hil</a>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- END SINGLE TESTIMONIALS -->
+
+                  <div class="box-area">
+                    <div class="rate">
+                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-checked.svg" alt="star">
+                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-checked.svg" alt="star">
+                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-checked.svg" alt="star">
+                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-nocheck.svg" alt="star">
+                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-nocheck.svg" alt="star">
+                    </div>
+                    <div class="area-title">Modern look & trending design</div>
+                    <div class="area-text">
+                      Get working experience to work with this amazing team & in
+                      future want to work together for bright future projects
+                      and also make deposit to freelancer.
+                    </div>
+                    <div class="area-user">
+                      <div class="area-img">
+                        <img class="user-img" src="./images/feedbacks-users/star-user-4.svg" alt="">
+                      </div>
+                      <div class="area-user-name">
+                        <p class="user-name">Denny Hilguston</p>
+                        <a class="user-link" href="#">@denny.hil</a>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- END SINGLE TESTIMONIALS -->
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </div>
+
     <script src="./js/jquery-3.6.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js"></script>
     <script src="./js/loader.js"></script>
     <script src="./js/animJquery.js"></script>
     <script src="./js/hamburger.js"></script>
-    <script src="./js/animEventsInterval.js"></script>
-
+    <script src="./js/feedback-slider.js"></script>
   </body>
 </html>
