ready slider after test

--- a/index.html
+++ b/index.html
@@ -552,11 +552,31 @@
                 <div class="testmonial_slider_area text-center owl-carousel">
                   <div class="box-area">
                     <div class="rate">
-                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-checked.svg" alt="star">
-                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-checked.svg" alt="star">
-                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-checked.svg" alt="star">
-                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-nocheck.svg" alt="star">
-                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-nocheck.svg" alt="star">
+                      <img
+                        class="rate-img"
+                        src="./images/feedbacks-users/star-svgrepo-checked.svg"
+                        alt="star"
+                      />
+                      <img
+                        class="rate-img"
+                        src="./images/feedbacks-users/star-svgrepo-checked.svg"
+                        alt="star"
+                      />
+                      <img
+                        class="rate-img"
+                        src="./images/feedbacks-users/star-svgrepo-checked.svg"
+                        alt="star"
+                      />
+                      <img
+                        class="rate-img"
+                        src="./images/feedbacks-users/star-svgrepo-nocheck.svg"
+                        alt="star"
+                      />
+                      <img
+                        class="rate-img"
+                        src="./images/feedbacks-users/star-svgrepo-nocheck.svg"
+                        alt="star"
+                      />
                     </div>
                     <div class="area-title">Modern look & trending design</div>
                     <div class="area-text">
@@ -566,7 +586,11 @@
                     </div>
                     <div class="area-user">
                       <div class="area-img">
-                        <img class="user-img" src="./images/feedbacks-users/star-user.svg" alt="">
+                        <img
+                          class="user-img"
+                          src="./images/feedbacks-users/star-user.svg"
+                          alt=""
+                        />
                       </div>
                       <div class="area-user-name">
                         <p class="user-name">Denny Hilguston</p>
@@ -578,11 +602,31 @@
 
                   <div class="box-area">
                     <div class="rate">
-                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-checked.svg" alt="star">
-                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-checked.svg" alt="star">
-                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-checked.svg" alt="star">
-                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-nocheck.svg" alt="star">
-                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-nocheck.svg" alt="star">
+                      <img
+                        class="rate-img"
+                        src="./images/feedbacks-users/star-svgrepo-checked.svg"
+                        alt="star"
+                      />
+                      <img
+                        class="rate-img"
+                        src="./images/feedbacks-users/star-svgrepo-checked.svg"
+                        alt="star"
+                      />
+                      <img
+                        class="rate-img"
+                        src="./images/feedbacks-users/star-svgrepo-checked.svg"
+                        alt="star"
+                      />
+                      <img
+                        class="rate-img"
+                        src="./images/feedbacks-users/star-svgrepo-nocheck.svg"
+                        alt="star"
+                      />
+                      <img
+                        class="rate-img"
+                        src="./images/feedbacks-users/star-svgrepo-nocheck.svg"
+                        alt="star"
+                      />
                     </div>
                     <div class="area-title">Design Quality & performance</div>
                     <div class="area-text">
@@ -592,7 +636,11 @@
                     </div>
                     <div class="area-user">
                       <div class="area-img">
-                        <img class="user-img" src="./images/feedbacks-users/star-user-2.svg" alt="">
+                        <img
+                          class="user-img"
+                          src="./images/feedbacks-users/star-user-2.svg"
+                          alt=""
+                        />
                       </div>
                       <div class="area-user-name">
                         <p class="user-name">Denny Hilguston</p>
@@ -604,11 +652,31 @@
 
                   <div class="box-area">
                     <div class="rate">
-                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-checked.svg" alt="star">
-                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-checked.svg" alt="star">
-                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-checked.svg" alt="star">
-                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-nocheck.svg" alt="star">
-                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-nocheck.svg" alt="star">
+                      <img
+                        class="rate-img"
+                        src="./images/feedbacks-users/star-svgrepo-checked.svg"
+                        alt="star"
+                      />
+                      <img
+                        class="rate-img"
+                        src="./images/feedbacks-users/star-svgrepo-checked.svg"
+                        alt="star"
+                      />
+                      <img
+                        class="rate-img"
+                        src="./images/feedbacks-users/star-svgrepo-checked.svg"
+                        alt="star"
+                      />
+                      <img
+                        class="rate-img"
+                        src="./images/feedbacks-users/star-svgrepo-nocheck.svg"
+                        alt="star"
+                      />
+                      <img
+                        class="rate-img"
+                        src="./images/feedbacks-users/star-svgrepo-nocheck.svg"
+                        alt="star"
+                      />
                     </div>
                     <div class="area-title">Layout and organized layers</div>
                     <div class="area-text">
@@ -618,7 +686,11 @@
                     </div>
                     <div class="area-user">
                       <div class="area-img">
-                        <img class="user-img" src="./images/feedbacks-users/star-user-3.svg" alt="">
+                        <img
+                          class="user-img"
+                          src="./images/feedbacks-users/star-user-3.svg"
+                          alt=""
+                        />
                       </div>
                       <div class="area-user-name">
                         <p class="user-name">Denny Hilguston</p>
@@ -630,11 +702,31 @@
 
                   <div class="box-area">
                     <div class="rate">
-                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-checked.svg" alt="star">
-                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-checked.svg" alt="star">
-                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-checked.svg" alt="star">
-                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-nocheck.svg" alt="star">
-                      <img class="rate-img" src="./images/feedbacks-users/star-svgrepo-nocheck.svg" alt="star">
+                      <img
+                        class="rate-img"
+                        src="./images/feedbacks-users/star-svgrepo-checked.svg"
+                        alt="star"
+                      />
+                      <img
+                        class="rate-img"
+                        src="./images/feedbacks-users/star-svgrepo-checked.svg"
+                        alt="star"
+                      />
+                      <img
+                        class="rate-img"
+                        src="./images/feedbacks-users/star-svgrepo-checked.svg"
+                        alt="star"
+                      />
+                      <img
+                        class="rate-img"
+                        src="./images/feedbacks-users/star-svgrepo-nocheck.svg"
+                        alt="star"
+                      />
+                      <img
+                        class="rate-img"
+                        src="./images/feedbacks-users/star-svgrepo-nocheck.svg"
+                        alt="star"
+                      />
                     </div>
                     <div class="area-title">Modern look & trending design</div>
                     <div class="area-text">
@@ -644,7 +736,11 @@
                     </div>
                     <div class="area-user">
                       <div class="area-img">
-                        <img class="user-img" src="./images/feedbacks-users/star-user-4.svg" alt="">
+                        <img
+                          class="user-img"
+                          src="./images/feedbacks-users/star-user-4.svg"
+                          alt=""
+                        />
                       </div>
                       <div class="area-user-name">
                         <p class="user-name">Denny Hilguston</p>
